Closed Bug 115357 Opened 24 years ago Closed 24 years ago

Favicon displayed blank

Categories

(SeaMonkey :: UI Design, defect, P2)

x86
All
defect

Tracking

(Not tracked)

RESOLVED FIXED
mozilla0.9.8

People

(Reporter: nightfly, Assigned: Biesinger)

References

(Blocks 1 open bug, )

Details

Attachments

(2 files)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.6+) Gecko/20011214 BuildID: 2001121403 Browsing to mentioned URL shows a blank favicon in the bookmark-menu and the url-bar instead of the expected linux penguin like IE does. http://lwn.net/favicon.ico seems to be a valid icon, tough. Reproducible: Always Steps to Reproduce: Browse to http://lwn.net/ Actual Results: Blank icon Expected Results: Linux penguin icon
Confirming. I see this on Win2K, build 2001121103 as well. I'm guessing this is a dupe, but not sure.
Status: UNCONFIRMED → NEW
Ever confirmed: true
QA Contact: sairuh → claudius
I think this should be a dup of 110077
Not sure it's a dup of bug #110077 exactly -- lwn.net actually has a apparently-valid favicon.ico as mentioned above. #110077 seems to be about invalid favicon.ico files, which isn't exactly a mozilla bug.
Just loaded LWN.NETs icon into my Visual C++ IDE. It has some pixels spread over the upper half of the icon that are set as transparent (and not the whole background). Maybe Mozilla has issues with transparent parts of icons?
I downloaded the favicon.ico from lwn.net and put it on a page of my own, and it still comes up blank. I'm not an expert the structure of ico files, but I think it's likely the file is invalid somehow, and that despite my earlier comment, this really is a dup of #110077. The alternative is that Moz's ico renderer is missing some valid-but-atypical ico file quirk...
Hmm, the Visual C++ resource editor will open the file okay, but Windows Explorer won't show the correct image, and ThumbsPlus can identify it as a 16x16 4bpp icon image, but can't display it, either. This makes it sound like the file itself isn't completely right.
I don't use That Other Browser (oh, excuse me, Internet interaction technology or whatnot) very much, but today I tried it, and I can report that the lwn.net icon doesn't work in IE 5.5 SP2 either.
Seeing this on linux too
OS: Windows 2000 → All
taking bug.
Assignee: blaker → cbiesinger
Status: NEW → ASSIGNED
OK. This icon is not really valid, it misses some bytes at the end. (at least the ICO Decoder doesn't get them). The missing bytes only contain transparency data. So I'll attach a patch to display the image even if some transparency data is missing; displaying the corresponding pixels opaque.
Attached patch Suggested PatchSplinter Review
Also removes an unnecessary null check (it's the only place where mObserver is null checked, so there's not much point in doing it here. If mObserver is null, the decoder will crash earlier).
adding keywords, setting target milestone cc'ing pavlov - could you please review?
Priority: -- → P2
Target Milestone: --- → mozilla0.9.8
If Explorer and IE aren't showing the icon, shouldn't we flog LWN on the problem? It seems like trying to work with icons that don't work in other browsers is following a IE-like behavior of accepting buggy data and trying to work with it, instead of giving the webmaster the idea that HIS data is broken and not the browser. We've taken a stance on this with many HTML issues (like TITLE vs. ALT).
The difference here is that Icon files are generated by programs, not by humans. So most likely lwn.net is not to blame for the invalid icon; at best, the program generating it is. Maybe the reason is even a transmission error. In my opinion, we should be not as strict with images as we are with HTML code. Besides, other invalid icons are also displayed by Mozilla.
As a data point, IE 6.0 does display this icon.
For the record, I just sent LWN a quick note about this and the bug number. Maybe someone else did they same earlier.
I'm attaching lwn.net's favicon here, in case they change it to a valid one.
Blocks: 120352
Comment on attachment 63014 [details] [diff] [review] Suggested Patch r=pavlov
Attachment #63014 - Flags: review+
Comment on attachment 63014 [details] [diff] [review] Suggested Patch sr=tor
Attachment #63014 - Flags: superreview+
a=blizzard on behalf of drivers for 0.9.8
Fix checked into the trunk by timeless. marking fixed
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
I don't see this in bonsai. Are we sure it made it in?
sorry. I see it on tinderbox now.
Both the attachment and the live icon at lwn.net load for me, Linux 2002011806. The background is white, not transparent. I assume this is Their Problem.
Yes, the icon is not transparent; this is lwn.net's fault.
For the record -- the response I got to e-mail I sent to lwn.net awhile ago: I picked it up some years ago from somewhere.. Everytime I try to make the shortcut icon work, I run into difficulties, it just never wants to do it for me. Don't know what's up. My inclination, at the moment, is to delete the file and just forget about the whole thing... Thanks, jon
Product: Core → Mozilla Application Suite
Component: XP Apps: GUI Features → UI Design
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: