Bug 115357 Favicon displayed blank patch by cbiesinger@web.de r=pavlov sr=tor a=blizzard